--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.18.0",
     "underscore": "^1.9.1",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "yarn": "^1.12.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
